<resources>
    <string name="app_name">MaterialDesign</string>

    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_favorites">Favorites</string>
    <string name="bottom_menu_profile">Profile</string>

    <string name="action_bar_menu_search">Search</string>


    <string name="main_activity_username">Username</string>
    <string name="main_activity_password">Password</string>
    <string name="main_activity_login">Login</string>
    <string name="main_activity_createAccount">New Account</string>

    <string name="home_activity_restaurants">Restaurants</string>
    <string name="home_activity_foods">Foods</string>

    <string name="item_activity_home_name">Restaurant Name</string>
    <string name="item_activity_home_rate">4.5</string>
    <string name="item_activity_home_restaurant_description">This is a description</string>

    <string name="activity_register_name">Name</string>
    <string name="activity_register_email">E-mail</string>
    <string name="activity_register_phone">Phone</string>
    <string name="activity_register_password">Password</string>
    <string name="activity_register_email_helper">Use a valid e-mail for your own security.</string>
    <string name="activity_register_adress">Adress</string>
    <string name="activity_register_neighborhood">Neighborhood</string>
    <string name="activity_register_number">Number</string>


    <string name="activity_register_create">Create</string>

    <string name="java_register_activity_invalid_name">Invalid name.</string>
    <string name="java_register_activity_invalid_phone">Invalid phone.</string>
    <string name="java_register_activity_invalid_email">Invalid e-mail.</string>
    <string name="java_register_activity_invalid_adress">Invalid adress.</string>
    <string name="java_register_activity_invalid_password">Invalid password.</string>
    <string name="java_register_activity_invalid_neighborhood">Invalid neighborhood.</string>
    <string name="java_register_activity_invalid_number">Invalid number.</string>






</resources>
