<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.design.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="310dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img_banner_card"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_restaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                tools:text="@string/item_activity_home_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_banner_card" />

            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/ratingBar_restaurant"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:stepSize="0.1"
                app:layout_constraintStart_toStartOf="@+id/tv_restaurantName"
                app:layout_constraintTop_toBottomOf="@+id/tv_restaurantName" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_restaurantRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="@string/item_activity_home_rate"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                android:textColor="@color/colorSecundaryText"
                app:layout_constraintStart_toEndOf="@+id/ratingBar_restaurant"
                app:layout_constraintTop_toTopOf="@+id/ratingBar_restaurant" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_restaurantDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintStart_toStartOf="@+id/ratingBar_restaurant"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_restaurant"
                tools:text="@string/item_activity_home_restaurant_description" />

            <ToggleButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_favorite_selector"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="@+id/img_banner_card"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.design.card.MaterialCardView>


</android.support.constraint.ConstraintLayout>